fixed stray links, fixed admin panel, fixed alignment

--- a/public/css/style-extra.css
+++ b/public/css/style-extra.css
@@ -2,6 +2,13 @@
 .logo img {
     height: 100px;
 }
+.bradcam_text h3 {
+    margin-top: 20px;
+}
+.chose_info {
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 20px;
+}
 
 .site-wrapper {
     display: flex;
@@ -71,6 +78,9 @@ footer {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+.margin-top-10 {
+    margin-top: 10px;
 }
 
 .gallery-img {
